crates/codegraph-tools/tests/snapshots/snapshot_tools_list__tools_list_watch_stop.snap
---
source: crates/codegraph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"watch_stop\")"
---
{
  "name": "watch_stop",
  "description": "Stop watching for file changes",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "description": "Empty parameter struct for tools that take no arguments\n(`detect_cycles`, `watch_start`, `watch_stop`). The empty `{}` JSON\nobject deserializes into this without error.",
    "title": "EmptyParams",
    "type": "object"
  }
}
